src/test/deca/context/invalid/oracle/binary_op_plus_with_one_class_left.deca
class A{}

{
    A a = new A();
    a + 50;
}